--- a/Research.html
+++ b/Research.html
@@ -130,13 +130,13 @@ body, html {
 <div class="bg-text">
 <p><strong>Research</strong></p>
 
-<p><a target="_blank" href=“research2.jpg"><img src=“research2.jpg" alt="Boblo" style="width:100%;margin-left:15px;"></a></p>
+<a target="_blank" href=“R2.jpg"><img src=“R2.jpg" alt="bub" style="width:100%;margin-left:15px;"></a>
   
 <p>I am an environmental and borderlands historian and my research is organized into inquiries about infrastructure and border history with a geographical focus on the U.S.-Canada border along the Detroit River. I have  in the process of publishing scholarship on the role of dredging as a political and territorializing process in the Detroit River in the late nineteenth and early twentieth centuries. I have long been interested in movement, migration, and mobility along and across political borders and explored this in my master’s thesis in urban design at Lawrence Technology University. I have recently become interested in questions of rivers as borders and broadly, borders themselves. I am interested in how borders manifest themselves on the ground and on water. Borders are more than lines on maps; they are realities that need to be understood in the unique historical-ecological- sociological- technological circumstances that make the borders in the first place.</p>
 
 <p>My dissertation explores the origins, motivations, and effects of dredging to offer a new history of the Detroit River. In so doing, it attempts to offer a new analytical lens by thinking about dredging as a historical, material, <I>and</I> ecological process. Furthermore, given the binational nature of the shipping channel, this dissertation argues that dredging is as much a territorializing process as it is a technological and political process. This is not a story about the rise and fall of dredging for dredging continues as a maintenance activity, worth multimillion contracts, every year; rather, it is a story of nature being altered and manipulated for greater economic returns. Between 1865 and 1930, the Detroit River went from a transportation chokepoint to an efficient and managed waterway. In examining dredging as a political, technological, and territorializing process, this dissertation is a new environmental history of the Detroit River that pays special attention to infrastructure and its impact on humans and non-humans.</p>
 
- <p><a target="_blank" href=“Research.jpg"><img src=“Research.jpg" alt="Boblo" style="width:300px;margin-left:15px;"></a></p>
+ <a target="_blank" href=“R1.jpg"><img src=“R1.jpg" alt="Buby" style="width:300px;margin-left:15px;"></a>
 
 </div>
 
