--- a/Research.html
+++ b/Research.html
@@ -54,6 +54,12 @@ body, html {
   bottom: 0;
   width: 100%;
 }
+  .container {
+  position: relative;
+  font-family: Arial;
+}
+
+
 
 .navbar a {
   float: left;
@@ -126,11 +132,13 @@ body, html {
 </head>
 <body>
 <div class="bg-image"></div>
-
 <div class="bg-text">
 <p><strong>Research</strong></p>
 
-<a target="_blank" href=“R2.jpg"><img src=“R2.jpg" alt="bub" style="width:100%;margin-left:15px;"></a>
+<div class="container">
+  <img src="R2.jpg" alt="Nature" style="width:100%;">
+  <div class="text-block">
+  
   
 <p>I am an environmental and borderlands historian and my research is organized into inquiries about infrastructure and border history with a geographical focus on the U.S.-Canada border along the Detroit River. I have  in the process of publishing scholarship on the role of dredging as a political and territorializing process in the Detroit River in the late nineteenth and early twentieth centuries. I have long been interested in movement, migration, and mobility along and across political borders and explored this in my master’s thesis in urban design at Lawrence Technology University. I have recently become interested in questions of rivers as borders and broadly, borders themselves. I am interested in how borders manifest themselves on the ground and on water. Borders are more than lines on maps; they are realities that need to be understood in the unique historical-ecological- sociological- technological circumstances that make the borders in the first place.</p>
 
@@ -138,6 +146,8 @@ body, html {
 
  <a target="_blank" href=“R1.jpg"><img src=“R1.jpg" alt="Buby" style="width:300px;margin-left:15px;"></a>
 
+</div>
+</div>
 </div>
 
 <div class="navbar">
@@ -150,6 +160,7 @@ body, html {
   <a href="CV.html">Curriculum Vitae</a>
    <a href="Contact.html">Contact</a>
   </div>
-
 </body>
+
 </html> 
+
