--- a/Contact.html
+++ b/Contact.html
@@ -77,8 +77,8 @@ body, html {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1800px;
-  max-height: 700px;
+  max-width: 1200px;
+  max-height: 600px;
   position: relative;
   margin: auto;
 }
@@ -103,9 +103,9 @@ body, html {
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: 3s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 3s;
 }
 
 @-webkit-keyframes fade {
@@ -213,10 +213,10 @@ img {
 <div class="bg-image"></div>
 
 <div class="bg-text">
-
-<h2 style="text-align:center">Contact</h2>
+<p><strong>Contact</strong></p>
 
 <div class="container">
+  
   <div class="mySlides">
     <img src=“C1.jpg" style="width:100%">
   </div>
@@ -234,14 +234,13 @@ img {
   </div>
 
   <div class="mySlides">
-    <img src=“C5.JPG style="width:100%">
+    <img src=“C5.jpg style="width:100%">
   </div>
     
   <div class="mySlides">
     <img src=“C6.jpg" style="width:100%">
   </div>
       <div class="mySlides">
-  
     <img src=“C7.jpg" style="width:100%">
   </div>
 
@@ -264,6 +263,8 @@ img {
   <div class="mySlides">
     <img src=“C12.jpg" style="width:100%">
   </div>
+
+  
   <a class="prev" onclick="plusSlides(-1)">❮</a>
   <a class="next" onclick="plusSlides(1)">❯</a>
 
@@ -291,22 +292,22 @@ img {
       <img class="demo cursor" src=“C6.jpg" style="width:100%" onclick="currentSlide(6)">
     </div>
     <div class="column">
-      <img class="demo cursor" src=“C7.jpg" style="width:100%" onclick="currentSlide(1)">
+      <img class="demo cursor" src=“C7.jpg" style="width:100%" onclick="currentSlide(7)">
     </div>
     <div class="column">
-      <img class="demo cursor" src=“C8.jpg" style="width:100%" onclick="currentSlide(2)">
+      <img class="demo cursor" src=“C8.jpg" style="width:100%" onclick="currentSlide(8)">
     </div>
     <div class="column">
-      <img class="demo cursor" src=“C9.jpg" style="width:100%" onclick="currentSlide(3)">
+      <img class="demo cursor" src=“C9.jpg" style="width:100%" onclick="currentSlide(9)">
     </div>
     <div class="column">
-      <img class="demo cursor" src=“C10.jpg" style="width:100%" onclick="currentSlide(4)">
+      <img class="demo cursor" src=“C10.jpg" style="width:100%" onclick="currentSlide(10)">
     </div>
     <div class="column">
-      <img class="demo cursor" src=“C11.jpg" style="width:100%" onclick="currentSlide(5)">
+      <img class="demo cursor" src=“C11.jpg" style="width:100%" onclick="currentSlide(11)">
     </div>    
     <div class="column">
-      <img class="demo cursor" src=“C12.jpg" style="width:100%" onclick="currentSlide(6)">
+      <img class="demo cursor" src=“C12.jpg" style="width:100%" onclick="currentSlide(12)">
     </div>
   </div>
 </div>
@@ -351,11 +352,9 @@ function showSlides(n) {
   <a href="Research.html">Research</a>
   <a href="DH.html">Digital Humanities</a>  
   <a href="CV.html">Curriculum Vitae</a>
-  <a href="Contact.html">Contact</a>
+  <a href="Contact">Contact</a>
   </div>
     
-
-
 
 </body>
 </html> 
