--- a/Research.html
+++ b/Research.html
@@ -144,7 +144,7 @@ body, html {
 
 <p>My dissertation explores the origins, motivations, and effects of dredging to offer a new history of the Detroit River. In so doing, it attempts to offer a new analytical lens by thinking about dredging as a historical, material, <I>and</I> ecological process. Furthermore, given the binational nature of the shipping channel, this dissertation argues that dredging is as much a territorializing process as it is a technological and political process. This is not a story about the rise and fall of dredging for dredging continues as a maintenance activity, worth multimillion contracts, every year; rather, it is a story of nature being altered and manipulated for greater economic returns. Between 1865 and 1930, the Detroit River went from a transportation chokepoint to an efficient and managed waterway. In examining dredging as a political, technological, and territorializing process, this dissertation is a new environmental history of the Detroit River that pays special attention to infrastructure and its impact on humans and non-humans.</p>
 <img src=“R1.jpg" alt="Buby" style="width:300px;margin-left:15px;">
-
+                                                                  </div>
 </div>
 </div>
 </div>
