--- a/Contact.html
+++ b/Contact.html
@@ -77,8 +77,8 @@ body, html {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 100%;
-  max-height: 500px;
+  max-width: 50%;
+  max-height: 25%;
   position: relative;
   margin: auto;
 }
@@ -272,40 +272,40 @@ img {
   </div>
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="C1.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+      <img class="demo cursor" src="C1.jpg" style="width:100%" onclick="currentSlide(1)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C2.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+      <img class="demo cursor" src="C2.jpg" style="width:100%" onclick="currentSlide(2)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C3.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="C3.jpg" style="width:100%" onclick="currentSlide(3)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C4.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="C4.jpg" style="width:100%" onclick="currentSlide(4)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C5.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+      <img class="demo cursor" src="C5.jpg" style="width:100%" onclick="currentSlide(5)">
     </div>    
     <div class="column">
-      <img class="demo cursor" src="C6..jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+      <img class="demo cursor" src="C6..jpg" style="width:100%" onclick="currentSlide(6)">
     </div>
         <div class="column">
-      <img class="demo cursor" src="C7.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+      <img class="demo cursor" src="C7.jpg" style="width:100%" onclick="currentSlide(7)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C8.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+      <img class="demo cursor" src="C8.jpg" style="width:100%" onclick="currentSlide(8)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C9.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="C9.jpg" style="width:100%" onclick="currentSlide(9)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C10.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="C10.jpg" style="width:100%" onclick="currentSlide(10)">
     </div>
     <div class="column">
-      <img class="demo cursor" src="C11.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+      <img class="demo cursor" src="C11.jpg" style="width:100%" onclick="currentSlide(11)">
     </div>    
     <div class="column">
-      <img class="demo cursor" src="C12.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+      <img class="demo cursor" src="C12.jpg" style="width:100%" onclick="currentSlide(12)">
     </div>
   </div>
 </div>
@@ -356,5 +356,6 @@ function showSlides(n) {
 
 </body>
 </html> 
+
 
 
