--- a/DH.html
+++ b/DH.html
@@ -128,7 +128,7 @@ body, html {
 <div class="bg-image"></div>
 
 <div class="bg-text">
-<p><strong>Training</strong></p>
+<h1 style="font-size:50px">Digital Humanities Training</h1>
 <p><i>Certificate in Digital Humanities</i> (requirements complete)<p>
 <p>2019-2020 <i>Cultural Heritage Informatics Initiative (CHI) Senior fellow </i> (by invitation)</p>
 <p>2016-2017  <i>Cultural Heritage Informatics Initiative (CHI) fellow</i></p>
