--- a/Contact.html
+++ b/Contact.html
@@ -213,7 +213,7 @@ img {
 <div class="bg-image"></div>
 
 <div class="bg-text">
-<p><strong>Contact</strong></p>
+<h1 style="font-size:50px">Contact</h1>
 
 <div class="container">
   <div class="mySlides">
