--- a/Research.html
+++ b/Research.html
@@ -133,7 +133,7 @@ body, html {
 <body>
 <div class="bg-image"></div>
 <div class="bg-text">
-<h1 style="font-size:50px">About</h1>
+<h1 style="font-size:50px">Research</h1>
 
 <div class="container">
   <img src="R2.jpg" alt="Nature" style="width:100%;">
