--- a/riverborders.html
+++ b/riverborders.html
@@ -72,7 +72,7 @@ body, html {
 	  
 	   
     <script>
-	mapboxgl.accessToken = 'pk.eyJ1IjoicmFteXNhdCIsImEiOiJjaXU5dHF5bzkwMDgwMnlxbXBqN2gyZHFxIn0.a1OCCJrEbzxQ4cJjtqRrew';
+	mapboxgl.accessToken = 'pk.eyJ1IjoicmFteXNhdCIsImEiOiJjazd6aWswbDgwNGw0M21wemwxY2JidHFyIn0.OeHUB_xEmeLVIW1L-wTC8A';
 	    var map = new mapboxgl.Map({
       container: 'map',
 		    style: 'mapbox://styles/ramysat/ck9appqby22gh1iplmukywmk2', 
